config/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eventing-demo
  labels:
    eventing.knative.dev/injection: enabled
